# marketing_tool

./: .env.example  .gitignore  README.md  celery_app.py  config.py  main.py  mcp_cli.py  pyproject.toml  requirements.txt
api/routes/: webhooks.py
app/: mcp_tools.py
core/: base_webhook_processor.py  facebook_parse.py  insta_parse.py  whatsapp_parse.py
models/: database.py  mcp.sql  scheduled_post.py  scheduled_post_repository.py  webhook_repository.py
scheduler/: excel_parser.py
service_handler/: excel_service.py  facebook_service.py  facebook_webhook_processor.py  insta_service.py  insta_webhook_processor.py  providers.py  schedule_service.py  whatsapp_service.py  whatsapp_webhook_processor.py
tasks/: facebook_tasks.py  instagram_tasks.py  scheduler_tasks.py  whatsapp_tasks.py
utils/: __init__.py  decorators.py  graph.py  logger.py
