[project]
name = "nyalazone-mcp-scheduler"
version = "0.1.0"
description = "Multi-platform content scheduler with MCP tools for Instagram, Facebook, and WhatsApp"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28",
    "httpx>=0.28",
    "uvicorn>=0.49",
    "celery>=5.5",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "anthropic>=0.50",
    "pypdf>=5.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"
